--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require leaflet
  *= require_tree .
  *= require_self
+ *= require font-awesome
  */
 
 * {
@@ -22,6 +23,11 @@
 
 html,body {
   height: 100%;
+}
+
+body {
+  background: #f0f0f0;
+  line-height: 1.4;
 }
 
 #map {
@@ -38,4 +44,47 @@ html,body {
   width: 200px;
   padding: 10px;
   background: #f0f0f0;
+}
+
+.fa-stack-1x {
+  color: #A09E84;
+}
+
+div.flex-container {
+  display: flex;
+}
+
+div.flex-container > div {
+  padding: 10px;
+  flex: 1;
+}
+
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  height: 100vh;
+  display: block;
+}
+
+.button {
+  background: #A09E84;
+  height: 100%;
+  padding: 20px;
+  color: #FFF;
+}
+
+div.input {
+  margin-bottom: 1em;
+}
+
+label {
+  width: 200px;
+  display: inline-block;
+}
+
+
+ul, li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
