--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,3 +88,12 @@ ul, li {
   margin: 0;
   padding: 0;
 }
+
+#wikihouse-logo {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  z-index: 5000;
+  width: 100px;
+  max-width: 10%;
+}
