--- a/app/views/embeds/show.html.erb
+++ b/app/views/embeds/show.html.erb
@@ -1,1 +1,2 @@
 <div id="map"></div>
+<%= link_to "https://new.wikihouse.cc" do %><%= image_tag "wikihouse-logo.svg", id: 'wikihouse-logo' %><% end %>
