no scroll on embedded map and link opens in parent window

--- a/app/views/embeds/show.html.erb
+++ b/app/views/embeds/show.html.erb
@@ -1,2 +1,2 @@
-<div id="map"></div>
-<%= link_to "https://new.wikihouse.cc" do %><%= image_tag "wikihouse-logo.svg", id: 'wikihouse-logo' %><% end %>
+<div id="map" class="embedded"></div>
+<%= link_to "https://new.wikihouse.cc", title: "WikiHouse", target: "_parent" do %><%= image_tag "wikihouse-logo.svg", id: 'wikihouse-logo' %><% end %>
