--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,4 +1,4 @@
-<script src="http://maps.googleapis.com/maps/api/js?sensor=false&amp;libraries=places"></script>
+<script src="//maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
 
 <div class="container">
 
