--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,4 +1,4 @@
-<script src="//maps.googleapis.com/maps/api/js?sensor=false&libraries=places"></script>
+<script src="//maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDtjm6A_jnLaGU2uA9oHTg6n1YYCmss8P8"></script>
 
 <div class="container">
 
