--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -50,7 +50,7 @@
       <%= f.input :url %>
     </fieldset>
 
-    <%= f.submit %>
+    <%= f.submit 'Submit Place', class: 'button' %>
   <% end %>
 
   <h2>3. Anything else you'd like to add?</h2>
