--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -121,12 +121,25 @@ legend {
   width: 100%;
   height: 400px;
   margin-bottom: 20px;
+  background: #F0F0F0;
+  border: 1px solid #E8E8E8;
 }
 
 input, textarea {
   padding: 4px 6px;
+  display: inline-block;
+  width: 100%;
 }
 
 #place_address {
   width: 100%;
+}
+
+input.button {
+  padding: 2px;
+  border: none;
+  border-radius: 4px;
+  width: auto;
+  padding: 10px 14px;
+  cursor: pointer;
 }
