--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,31 +1,6 @@
-<script src="//maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDtjm6A_jnLaGU2uA9oHTg6n1YYCmss8P8"></script>
+<%= render "places/header" %>
 
 <div class="container">
-
-  <h1><%= link_to "Map", root_path %> / Add a Place</h1>
-
-  <h2>1. What would you like to add to the map?</h2>
-
-  <div class="flex-container">
-    <div>
-      <div class="button">
-        <%= fa_stacked_icon "user", base: "square", text: 'Individual' %>
-        <p>Individuals who are developing or building a WikiHouse and want to connect with other individuals in their area.</p>
-      </div>
-    </div>
-    <div>
-      <div class="button">
-        <%= fa_stacked_icon "group", base: "square", text: 'Organisation' %>
-        <p>For community organisations and small to medium business that are developing or building using any WikiHouse system and want to be connected with other opportunities and individuals.</p>
-      </div>
-    </div>
-    <div>
-      <div class="button">
-        <%= fa_stacked_icon "home", base: "square", text: 'Build' %>
-        <p>Of course this is for people who have reached a stage where they have created either a model or a full scale prototype or pilot. Please include website or social media urls, links to files and details of core members involved in the project. If you have a completed build please also DM us on Twitter and we will add you to our directory of builds.</p>
-      </div>
-    </div>
-  </div>
 
   <h2>2. Please add details</h2>
 
@@ -38,10 +13,10 @@
 
     <fieldset>
       <legend>Location</legend>
-      <%= f.input :address, as: :string %>
+      <%= f.input :address, as: :string, input_html: { id: 'place_address' } %>
       <div id="geocomplete-map"></div>
-      <%= f.input :lat %>
-      <%= f.input :lng %>
+      <%= f.input :lat, input_html: { id: 'place_lat' } %>
+      <%= f.input :lng, input_html: { id: 'place_lng' } %>
     </fieldset>
 
     <fieldset>
