--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WikihouseMap</title>
+    <title>WikiHouse Map</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <script src="//maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDtjm6A_jnLaGU2uA9oHTg6n1YYCmss8P8"></script>
   </head>
   <body>
     <%= yield %>
