--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,33 +1,2 @@
 <%= render "places/header" %>
-
-<div class="container">
-
-  <h2>2. Please add details</h2>
-
-  <%= simple_form_for @place do |f| %>
-    <fieldset>
-      <legend>Basic Details</legend>
-      <%= f.input :name %>
-      <%= f.input :description %>
-    </fieldset>
-
-    <fieldset>
-      <legend>Location</legend>
-      <%= f.input :address, as: :string, input_html: { id: 'place_address' } %>
-      <div id="geocomplete-map"></div>
-      <%= f.input :lat, input_html: { id: 'place_lat' } %>
-      <%= f.input :lng, input_html: { id: 'place_lng' } %>
-    </fieldset>
-
-    <fieldset>
-      <legend>Contact Details</legend>
-      <%= f.input :phone %>
-      <%= f.input :url %>
-    </fieldset>
-
-    <%= f.submit 'Submit Place', class: 'button' %>
-  <% end %>
-
-  <h2>3. Anything else you'd like to add?</h2>
-
-</div>
+<%= render "places/form" unless @place.class == Place %>
