--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,7 +1,15 @@
 <h1><%= @place %></h1>
+<%= @place.current_state %>
 
 <%= simple_format @place.description %>
 
 <% if @place.new? %>
 Thanks for submitting your project, it is now being reviewed.
+<% end %>
+
+<% @place.current_state.events.keys.each do |key| %>
+  <%= form_for @place, url: transition_place_path(@place) do |f| %>
+    <%= hidden_field_tag :state_name, key %>
+    <%= submit_tag key %>
+  <% end %>
 <% end %>
