--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -5,7 +5,7 @@
   <%= simple_form_for @place do |f| %>
     <fieldset>
       <legend>Basic Details</legend>
-      <%= f.input :name %>
+      <%= f.input :name, autofocus: true %>
       <%= f.input :description %>
     </fieldset>
 
