--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -4,12 +4,16 @@
   <ul>
     <% if current_user %>
       <li><h2><%= current_user %></h2></li>
-      <li><%= link_to "sign out", "/signout" %></li>
-    <% else %>
-      <li><%= link_to "sign in", '/auth/slack' %></li>
     <% end %>
+
     <% if policy(Place).create? %>
       <li><%= link_to fa_icon("plus", text: "Add a place"), new_place_path %></li>
+    <% end %>
+
+    <% if current_user %>
+      <li><%= link_to "Sign out", "/signout" %></li>
+    <% else %>
+      <li><%= link_to fa_icon("slack", text: "Sign in with Slack"), '/auth/slack' %></li>
     <% end %>
   </ul>
 </div>
