--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,13 +3,15 @@
 
 <%= simple_format @place.description %>
 
-<% if @place.new? %>
-Thanks for submitting your project, it is now being reviewed.
+<% if @place.awaiting_review? %>
+  <p>Thanks for submitting your project, it is now being reviewed.</p>
 <% end %>
 
-<% @place.current_state.events.keys.each do |key| %>
-  <%= form_for @place, url: transition_place_path(@place) do |f| %>
-    <%= hidden_field_tag :state_name, key %>
-    <%= submit_tag key %>
+<% if params[:review] %>
+  <% @place.current_state.events.keys.each do |key| %>
+    <%= form_for @place, url: transition_place_path(@place) do |f| %>
+      <%= hidden_field_tag :state_name, key %>
+      <%= submit_tag key %>
+    <% end %>
   <% end %>
 <% end %>
