Use consistent icons
* Switch "Contributor" to a star icon, since the "group" icon doesn't
  really work when a contributor could be one or many people
* Use font-awesome icons on leaflet markers (this entailed upgrading
  leaflet and installing the leaflet-vector-markers plugin)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
  *= require Leaflet.Instagram
  *= require MarkerCluster
  *= require MarkerCluster.Default
+ *= require leaflet-vector-markers
  *= require font-awesome
  *= require_tree .
  *= require_self
