Different colours for different types of markers

--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -19,8 +19,16 @@
   i {
     top: 4px;
   }
+}
 
+.marker-Contributor {
   svg path {
-    fill: #555;
+    fill: #509752;
+  }
+}
+
+.marker-Build {
+  svg path {
+    fill: #975150;
   }
 }
