--- a/app/views/places/_header.html.erb
+++ b/app/views/places/_header.html.erb
@@ -1,23 +1,19 @@
-<div class="container">
+<h1><%= link_to "Map", root_path %> / Add a Place</h1>
 
-  <h1><%= link_to "Map", root_path %> / Add a Place</h1>
+<h2>1. What would you like to add to the map?</h2>
 
-  <h2>1. What would you like to add to the map?</h2>
+<ul class="place-type-list">
+  <li>
+    <%= link_to new_contributor_path, class: ('active' if request.path == new_contributor_path) do %>
+      <%= fa_stacked_icon Contributor.icon, base: "square", text: 'Contributor' %>
+      <p>Individuals and organisations who are developing or building a WikiHouse</p>
+    <% end %>
+  </li>
 
-  <ul class="place-type-list">
-    <li>
-      <%= link_to new_contributor_path, class: "button #{'active' if request.path == new_contributor_path}" do %>
-        <%= fa_stacked_icon Contributor.icon, base: "square", text: 'Contributor' %>
-        <p>Individuals and organisations who are developing or building a WikiHouse</p>
-      <% end %>
-    </li>
-
-    <li>
-      <%= link_to new_build_path, class: "button #{'active' if request.path == new_build_path}" do %>
-        <%= fa_stacked_icon Build.icon, base: "square", text: 'Build' %>
-        <p>WikiHouse projects which have produced either a model or a full scale prototype or pilot</p>
-      <% end %>
-    </li>
-  </ul>
-
-</div>
+  <li>
+    <%= link_to new_build_path, class: ('active' if request.path == new_build_path) do %>
+      <%= fa_stacked_icon Build.icon, base: "square", text: 'Build' %>
+      <p>WikiHouse projects which have produced either a model or a full scale prototype or pilot</p>
+    <% end %>
+  </li>
+</ul>
