--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,2 +1,4 @@
-<%= render "places/header" %>
-<%= render "places/form" unless @place.class == Place %>
+<div class="container">
+  <%= render "places/header" %>
+  <%= render "places/form" unless @place.class == Place %>
+</div>
