--- a/app/views/static/thanks.html.erb
+++ b/app/views/static/thanks.html.erb
@@ -1,4 +1,5 @@
-<div class="padding">
-  <p>Thanks for submitting the details, we'll now review the application and be in touch</p>
-  <%= link_to "Go back to Map", root_path %>
+<div class="container">
+  <h1>Thanks</h1>
+  <p>We'll review your submission as soon as possible.</p>
+  <p><%= link_to "Back to map", root_path %></p>
 </div>
