--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,199 +16,15 @@
  *= require MarkerCluster.Default
  *= require leaflet-vector-markers
  *= require font-awesome
- *= require_tree .
  *= require_self
  */
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-a {
-  color: #6699CC;
-}
-
-html,body {
-  height: 100%;
-}
-
-body {
-  background: #f0f0f0;
-  line-height: 1.4;
-  font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans;
-}
-
-#map {
-  flex: 1;
-  height: 100vh;
-  display: block;
-}
-
-#container {
-  display: flex;
-}
-
-#sidebar {
-  width: 200px;
-  padding: 10px;
-  background: #f0f0f0;
-}
-
-.fa-stack-1x {
-  color: #A09E84;
-}
-
-.padding {
-  padding: 20px;
-}
-
-.container {
-  max-width: 900px;
-  margin: 0 auto;
-  display: block;
-}
-
-.place-type-list {
-  > li {
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-}
-
-@media (min-width: 480px) {
-  .place-type-list {
-    display: flex;
-
-    > li {
-      margin-left: 5px;
-      margin-right: 5px;
-      flex: 1;
-
-      &:first-child {
-        margin-left: 0;
-      }
-
-      &:last-child {
-        margin-right: 0;
-      }
-    }
-  }
-}
-
-.button {
-  background: #A09E84;
-  height: 100%;
-  padding: 15px;
-  color: #FFF;
-  border: none;
-  display: block;
-
-  p {
-    margin: 10px 0 0 0;
-  }
-
-  &:hover {
-    background: darken(#A09E84, 5%);
-    text-decoration: none;
-    color: white;
-
-    i.fa-stack-1x {
-      color: darken(#A09E84, 5%);
-    }
-  }
-
-  &.active {
-    background: #6699CC;
-
-    i.fa-stack-1x {
-      color: #6699CC;
-    }
-  }
-}
-
-div.input {
-  margin-bottom: 1em;
-}
-
-
-ul, li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-#wikihouse-logo {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  z-index: 5000;
-  width: 100px;
-  max-width: 10%;
-}
-
-form {
-  background: #FFF;
-  padding: 1em;
-  vertical-align: top;
-  margin-bottom: 1em;
-}
-
-fieldset {
-  margin-bottom: 1em;
-
-  input, textarea {
-    padding: 4px 6px;
-    display: inline-block;
-    width: 100%;
-  }
-
-  input.button {
-    padding: 2px;
-    border: none;
-    border-radius: 4px;
-    width: auto;
-    padding: 10px 14px;
-    cursor: pointer;
-  }
-
-  label {
-    width: 100%;
-    max-width: 300px;
-    display: inline-block;
-  }
-}
-
-legend {
-  color: #aaa;
-}
-
-#geocomplete-map {
-  width: 100%;
-  height: 400px;
-  margin-bottom: 20px;
-  background: #F0F0F0;
-  border: 1px solid #E8E8E8;
-}
-
-
-#place_address {
-  width: 100%;
-}
-
-span.error {
-  color: red;
-}
-
-a {
-  text-decoration: none;
-}
-
-.hint {
-  color: #AAA;
-  margin: 0.5em 0;
-  font-style: italic;
-}
-
-abbr[title] {
-  border: 0;
-  text-decoration: underline dotted;
-}
+@import "application/layout";
+@import "application/map";
+@import "application/general";
+@import "application/submission";
+@import "application/thanks";
+@import "application/embed";
