--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,6 +7,16 @@
     <title>Admin | WikiHouse Map</title>
   </head>
   <body>
+    <nav class="navbar navbar-inverse">
+      <div class="container">
+        <ul class="nav navbar-nav">
+          <% Place.workflow_spec.states.keys.map(&:to_s).each do |state| %>
+            <%= nav_link state %>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
+
     <div class="container">
       <%= yield %>
     </div>
