Change what data we're capturing
* Use the json data field to capture different fields for different
  types of Place
* Render everything properly
* Remove fields we don't need

https://trello.com/c/2IgXOx4n/166-capture-relevant-map-data-in-submissions

--- a/app/views/admin/places/_place.html.erb
+++ b/app/views/admin/places/_place.html.erb
@@ -20,26 +20,10 @@
       </td>
     </tr>
 
-    <% if place.description? %>
-      <tr>
-        <th>Description</th>
-        <td><%= place.description %></td>
-      </tr>
-    <% end %>
-
-    <% if place.phone? %>
-      <tr>
-        <th>Phone</th>
-        <td><%= place.phone %></td>
-      </tr>
-    <% end %>
-
-    <% if place.url? %>
-      <tr>
-        <th>URL</th>
-        <td><%= link_to place.url, place.url %></td>
-      </tr>
-    <% end %>
+    <tr>
+      <th>Contents</th>
+      <td><%= render_place place %></td>
+    </tr>
 
     <% if place.notes? %>
       <tr>
