--- a/app/assets/stylesheets/application/_map.scss
+++ b/app/assets/stylesheets/application/_map.scss
@@ -21,12 +21,32 @@
   height: 100vh;
   display: block;
 
+  h2 {
+    margin-top: 0;
+    font-size: 20px;
+  }
+
   .leaflet-popup-content {
     max-height: 300px;
     overflow-y: auto;
-    &,* {
+    margin: 15px;
+
+    &, * {
       max-width: 100%;
       word-wrap: break-word;
+    }
+
+    :last-child {
+      margin-bottom: 0;
+    }
+
+    p {
+      margin: 10px 0;
+    }
+
+    ul {
+      padding: 0;
+      list-style-type: none;
     }
   }
 
