Add image upload functionality
https://trello.com/c/2IgXOx4n/166-capture-relevant-map-data-in-submissions

--- a/app/assets/stylesheets/application/_map.scss
+++ b/app/assets/stylesheets/application/_map.scss
@@ -27,6 +27,8 @@
   }
 
   .leaflet-popup-content {
+    min-width: 150px;
+    max-width: 300px;
     max-height: 300px;
     overflow-y: auto;
     margin: 15px;
